--- a/content/pom.xml
+++ b/content/pom.xml
@@ -17,7 +17,7 @@
 
     <artifactId>enterprise-ecom-content</artifactId>
     <packaging>content-package</packaging>
-    <name>Enterprise Ecom Package</name>
+    <name>Enterprise Ecom Content Package</name>
 
     <dependencies>
         <dependency>
