--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
 	<groupId>enterprise-ecom-group</groupId>
 	<artifactId>enterprise-ecom</artifactId>
-	<version>1.0.RELEASE</version>
+	<version>1.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>Enterprise Ecom - Reactor Project</name>
